1/5/12 change drag bounds for shaker, OK if top part of shaker goes off top edge of play area
# 0.00.01 (59868) Jan 4, 2012
1/4/12 early dev version for discussion of design issues with JC
1/3/12 add precipitate and particles to the model
1/3/12 add relative location of shaker holes to model
1/3/12 move shaker origin to center holes in shaker image
1/3/12 add node for debugging origin of shaker and dropper
1/3/12 make location of ticks configurable, move ticks to left edge of beaker
1/3/12 use a different probe for concentration meter that doesn't have problem with wire showing in center
12/27/11 constraining dragging of concentration meter and probe to the stage
12/27/11 move SoluteForm enum into Solute model class
12/27/11 disable evaporation slider when beaker is empty
12/27/11 add "evaporator" to model
12/27/11 add sim-sharing parameter "isInSolution" for dragging of meter probe
12/27/11 dev: move model properties to a dialog, accessible via a button in play area
12/27/11 create dev package
12/27/11 add concentration meter (model and view)
12/27/11 remove solute from solution when changing solute
12/26/11 fix "Saturated!" indicator for empty beaker
12/26/11 a little work on add/removeSolvent and add/removeSolute in model
12/26/11 fix dropper button, doesn't disable when beaker is full
12/26/11 move origin of dropper to hole that dispenses stock solution
12/26/11 replace ImmutableVector2D with Point2D for non-public fields
12/26/11 first pass at stock solution coming out of dropper (not aligned with dropper hole)
12/26/11 reorganize time-based portion of model
12/26/11 model of shaker dispensing solute
12/26/11 implement evaporation
12/26/11 add dropper dispensing solution to model
12/26/11 disable dropper when beaker is full (add disabled button to piccolo-phet image suite)
12/26/11 add solvent, drain solution as clock ticks
12/26/11 add clock to model
12/26/11 add solution in beaker
12/26/11 add precipitate on bottom of beaker